parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 59
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On toplevel shift to state 83
-- On PExpr shift to state 17
-- On ORExpr shift to state 32
-- On MExpr shift to state 29
-- On LetRecExpr shift to state 38
-- On LetExpr shift to state 39
-- On LTExpr shift to state 34
-- On IfExpr shift to state 40
-- On FunExpr shift to state 41
-- On Expr shift to state 84
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 43
-- On AExpr shift to state 23

State 1:
AExpr -> TRUE . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AExpr -> TRUE 
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On OR reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On MINUS reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On LPAREN reduce production AExpr -> TRUE 
-- On LET reduce production AExpr -> TRUE 
-- On INTV reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ID reduce production AExpr -> TRUE 
-- On FALSE reduce production AExpr -> TRUE 
-- On EQ reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On AND reduce production AExpr -> TRUE 

State 2:
AExpr -> LPAREN . Expr RPAREN [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On ORExpr shift to state 32
-- On MExpr shift to state 29
-- On LetRecExpr shift to state 38
-- On LetExpr shift to state 39
-- On LTExpr shift to state 34
-- On IfExpr shift to state 40
-- On FunExpr shift to state 41
-- On Expr shift to state 57
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 43
-- On AExpr shift to state 23

State 3:
LetExpr -> LET . ID EQ Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
LetRecExpr -> LET . REC ID EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On REC shift to state 4
-- On ID shift to state 52

State 4:
LetRecExpr -> LET REC . ID EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 5

State 5:
LetRecExpr -> LET REC ID . EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On EQ shift to state 6

State 6:
LetRecExpr -> LET REC ID EQ . FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On FUN shift to state 7

State 7:
LetRecExpr -> LET REC ID EQ FUN . ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 8

State 8:
LetRecExpr -> LET REC ID EQ FUN ID . RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On RARROW shift to state 9

State 9:
LetRecExpr -> LET REC ID EQ FUN ID RARROW . Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On ORExpr shift to state 32
-- On MExpr shift to state 29
-- On LetRecExpr shift to state 38
-- On LetExpr shift to state 39
-- On LTExpr shift to state 34
-- On IfExpr shift to state 40
-- On FunExpr shift to state 41
-- On Expr shift to state 49
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 43
-- On AExpr shift to state 23

State 10:
AExpr -> INTV . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AExpr -> INTV 
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On OR reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On MINUS reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On LPAREN reduce production AExpr -> INTV 
-- On LET reduce production AExpr -> INTV 
-- On INTV reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ID reduce production AExpr -> INTV 
-- On FALSE reduce production AExpr -> INTV 
-- On EQ reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On AND reduce production AExpr -> INTV 

State 11:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On ORExpr shift to state 32
-- On MExpr shift to state 29
-- On LetRecExpr shift to state 38
-- On LetExpr shift to state 39
-- On LTExpr shift to state 34
-- On IfExpr shift to state 40
-- On FunExpr shift to state 41
-- On Expr shift to state 44
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 43
-- On AExpr shift to state 23

State 12:
AExpr -> ID . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On MINUS reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On LET reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On EQ reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On AND reduce production AExpr -> ID 

State 13:
FunExpr -> FUN . ID RARROW Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 14

State 14:
FunExpr -> FUN ID . RARROW Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On RARROW shift to state 15

State 15:
FunExpr -> FUN ID RARROW . Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On ORExpr shift to state 32
-- On MExpr shift to state 29
-- On LetRecExpr shift to state 38
-- On LetExpr shift to state 39
-- On LTExpr shift to state 34
-- On IfExpr shift to state 40
-- On FunExpr shift to state 41
-- On Expr shift to state 42
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 43
-- On AExpr shift to state 23

State 16:
AExpr -> FALSE . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AExpr -> FALSE 
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On OR reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On MINUS reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On LPAREN reduce production AExpr -> FALSE 
-- On LET reduce production AExpr -> FALSE 
-- On INTV reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ID reduce production AExpr -> FALSE 
-- On FALSE reduce production AExpr -> FALSE 
-- On EQ reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On AND reduce production AExpr -> FALSE 

State 17:
LTExpr -> PExpr . LT PExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
LTExpr -> PExpr . EQ PExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
LTExpr -> PExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
PExpr -> PExpr . MINUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On PLUS shift to state 18
-- On MINUS shift to state 25
-- On LT shift to state 27
-- On EQ shift to state 30
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On OR reduce production LTExpr -> PExpr 
-- On LET reduce production LTExpr -> PExpr 
-- On IN reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 
-- On AND reduce production LTExpr -> PExpr 

State 18:
PExpr -> PExpr PLUS . MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On MExpr shift to state 19
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 19:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
PExpr -> PExpr PLUS MExpr . [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On MULT shift to state 20
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On OR reduce production PExpr -> PExpr PLUS MExpr 
-- On MINUS reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On LET reduce production PExpr -> PExpr PLUS MExpr 
-- On IN reduce production PExpr -> PExpr PLUS MExpr 
-- On EQ reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 
-- On AND reduce production PExpr -> PExpr PLUS MExpr 

State 20:
MExpr -> MExpr MULT . AppExpr [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AppExpr shift to state 21
-- On AExpr shift to state 23

State 21:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
MExpr -> MExpr MULT AppExpr . [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AExpr shift to state 22
-- On THEN reduce production MExpr -> MExpr MULT AppExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AppExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AppExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AppExpr 
-- On OR reduce production MExpr -> MExpr MULT AppExpr 
-- On MULT reduce production MExpr -> MExpr MULT AppExpr 
-- On MINUS reduce production MExpr -> MExpr MULT AppExpr 
-- On LT reduce production MExpr -> MExpr MULT AppExpr 
-- On LET reduce production MExpr -> MExpr MULT AppExpr 
-- On IN reduce production MExpr -> MExpr MULT AppExpr 
-- On EQ reduce production MExpr -> MExpr MULT AppExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AppExpr 
-- On AND reduce production MExpr -> MExpr MULT AppExpr 

State 22:
AppExpr -> AppExpr AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AppExpr -> AppExpr AExpr 
-- On THEN reduce production AppExpr -> AppExpr AExpr 
-- On SEMISEMI reduce production AppExpr -> AppExpr AExpr 
-- On RPAREN reduce production AppExpr -> AppExpr AExpr 
-- On PLUS reduce production AppExpr -> AppExpr AExpr 
-- On OR reduce production AppExpr -> AppExpr AExpr 
-- On MULT reduce production AppExpr -> AppExpr AExpr 
-- On MINUS reduce production AppExpr -> AppExpr AExpr 
-- On LT reduce production AppExpr -> AppExpr AExpr 
-- On LPAREN reduce production AppExpr -> AppExpr AExpr 
-- On LET reduce production AppExpr -> AppExpr AExpr 
-- On INTV reduce production AppExpr -> AppExpr AExpr 
-- On IN reduce production AppExpr -> AppExpr AExpr 
-- On ID reduce production AppExpr -> AppExpr AExpr 
-- On FALSE reduce production AppExpr -> AppExpr AExpr 
-- On EQ reduce production AppExpr -> AppExpr AExpr 
-- On ELSE reduce production AppExpr -> AppExpr AExpr 
-- On AND reduce production AppExpr -> AppExpr AExpr 

State 23:
AppExpr -> AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
-- On TRUE reduce production AppExpr -> AExpr 
-- On THEN reduce production AppExpr -> AExpr 
-- On SEMISEMI reduce production AppExpr -> AExpr 
-- On RPAREN reduce production AppExpr -> AExpr 
-- On PLUS reduce production AppExpr -> AExpr 
-- On OR reduce production AppExpr -> AExpr 
-- On MULT reduce production AppExpr -> AExpr 
-- On MINUS reduce production AppExpr -> AExpr 
-- On LT reduce production AppExpr -> AExpr 
-- On LPAREN reduce production AppExpr -> AExpr 
-- On LET reduce production AppExpr -> AExpr 
-- On INTV reduce production AppExpr -> AExpr 
-- On IN reduce production AppExpr -> AExpr 
-- On ID reduce production AppExpr -> AExpr 
-- On FALSE reduce production AppExpr -> AExpr 
-- On EQ reduce production AppExpr -> AExpr 
-- On ELSE reduce production AppExpr -> AExpr 
-- On AND reduce production AppExpr -> AExpr 

State 24:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LPAREN LET INTV IN ID FALSE EQ ELSE AND ]
MExpr -> AppExpr . [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AExpr shift to state 22
-- On THEN reduce production MExpr -> AppExpr 
-- On SEMISEMI reduce production MExpr -> AppExpr 
-- On RPAREN reduce production MExpr -> AppExpr 
-- On PLUS reduce production MExpr -> AppExpr 
-- On OR reduce production MExpr -> AppExpr 
-- On MULT reduce production MExpr -> AppExpr 
-- On MINUS reduce production MExpr -> AppExpr 
-- On LT reduce production MExpr -> AppExpr 
-- On LET reduce production MExpr -> AppExpr 
-- On IN reduce production MExpr -> AppExpr 
-- On EQ reduce production MExpr -> AppExpr 
-- On ELSE reduce production MExpr -> AppExpr 
-- On AND reduce production MExpr -> AppExpr 

State 25:
PExpr -> PExpr MINUS . MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On MExpr shift to state 26
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 26:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
PExpr -> PExpr MINUS MExpr . [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On MULT shift to state 20
-- On THEN reduce production PExpr -> PExpr MINUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr MINUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr MINUS MExpr 
-- On PLUS reduce production PExpr -> PExpr MINUS MExpr 
-- On OR reduce production PExpr -> PExpr MINUS MExpr 
-- On MINUS reduce production PExpr -> PExpr MINUS MExpr 
-- On LT reduce production PExpr -> PExpr MINUS MExpr 
-- On LET reduce production PExpr -> PExpr MINUS MExpr 
-- On IN reduce production PExpr -> PExpr MINUS MExpr 
-- On EQ reduce production PExpr -> PExpr MINUS MExpr 
-- On ELSE reduce production PExpr -> PExpr MINUS MExpr 
-- On AND reduce production PExpr -> PExpr MINUS MExpr 

State 27:
LTExpr -> PExpr LT . PExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 28
-- On MExpr shift to state 29
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 28:
LTExpr -> PExpr LT PExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LET IN ELSE AND ]
PExpr -> PExpr . MINUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LET IN ELSE AND ]
-- On PLUS shift to state 18
-- On MINUS shift to state 25
-- On THEN reduce production LTExpr -> PExpr LT PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr LT PExpr 
-- On RPAREN reduce production LTExpr -> PExpr LT PExpr 
-- On OR reduce production LTExpr -> PExpr LT PExpr 
-- On LET reduce production LTExpr -> PExpr LT PExpr 
-- On IN reduce production LTExpr -> PExpr LT PExpr 
-- On ELSE reduce production LTExpr -> PExpr LT PExpr 
-- On AND reduce production LTExpr -> PExpr LT PExpr 

State 29:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS OR MULT MINUS LT LET IN EQ ELSE AND ]
PExpr -> MExpr . [ THEN SEMISEMI RPAREN PLUS OR MINUS LT LET IN EQ ELSE AND ]
-- On MULT shift to state 20
-- On THEN reduce production PExpr -> MExpr 
-- On SEMISEMI reduce production PExpr -> MExpr 
-- On RPAREN reduce production PExpr -> MExpr 
-- On PLUS reduce production PExpr -> MExpr 
-- On OR reduce production PExpr -> MExpr 
-- On MINUS reduce production PExpr -> MExpr 
-- On LT reduce production PExpr -> MExpr 
-- On LET reduce production PExpr -> MExpr 
-- On IN reduce production PExpr -> MExpr 
-- On EQ reduce production PExpr -> MExpr 
-- On ELSE reduce production PExpr -> MExpr 
-- On AND reduce production PExpr -> MExpr 

State 30:
LTExpr -> PExpr EQ . PExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 31
-- On MExpr shift to state 29
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 31:
LTExpr -> PExpr EQ PExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LET IN ELSE AND ]
PExpr -> PExpr . MINUS MExpr [ THEN SEMISEMI RPAREN PLUS OR MINUS LET IN ELSE AND ]
-- On PLUS shift to state 18
-- On MINUS shift to state 25
-- On THEN reduce production LTExpr -> PExpr EQ PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr EQ PExpr 
-- On RPAREN reduce production LTExpr -> PExpr EQ PExpr 
-- On OR reduce production LTExpr -> PExpr EQ PExpr 
-- On LET reduce production LTExpr -> PExpr EQ PExpr 
-- On IN reduce production LTExpr -> PExpr EQ PExpr 
-- On ELSE reduce production LTExpr -> PExpr EQ PExpr 
-- On AND reduce production LTExpr -> PExpr EQ PExpr 

State 32:
Expr -> ORExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
ORExpr -> ORExpr . OR ANDExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE ]
-- On OR shift to state 33
-- On THEN reduce production Expr -> ORExpr 
-- On SEMISEMI reduce production Expr -> ORExpr 
-- On RPAREN reduce production Expr -> ORExpr 
-- On LET reduce production Expr -> ORExpr 
-- On IN reduce production Expr -> ORExpr 
-- On ELSE reduce production Expr -> ORExpr 

State 33:
ORExpr -> ORExpr OR . ANDExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On MExpr shift to state 29
-- On LTExpr shift to state 34
-- On AppExpr shift to state 24
-- On ANDExpr shift to state 35
-- On AExpr shift to state 23

State 34:
ANDExpr -> LTExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
-- On THEN reduce production ANDExpr -> LTExpr 
-- On SEMISEMI reduce production ANDExpr -> LTExpr 
-- On RPAREN reduce production ANDExpr -> LTExpr 
-- On OR reduce production ANDExpr -> LTExpr 
-- On LET reduce production ANDExpr -> LTExpr 
-- On IN reduce production ANDExpr -> LTExpr 
-- On ELSE reduce production ANDExpr -> LTExpr 
-- On AND reduce production ANDExpr -> LTExpr 

State 35:
ANDExpr -> ANDExpr . AND LTExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
ORExpr -> ORExpr OR ANDExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE ]
-- On AND shift to state 36
-- On THEN reduce production ORExpr -> ORExpr OR ANDExpr 
-- On SEMISEMI reduce production ORExpr -> ORExpr OR ANDExpr 
-- On RPAREN reduce production ORExpr -> ORExpr OR ANDExpr 
-- On OR reduce production ORExpr -> ORExpr OR ANDExpr 
-- On LET reduce production ORExpr -> ORExpr OR ANDExpr 
-- On IN reduce production ORExpr -> ORExpr OR ANDExpr 
-- On ELSE reduce production ORExpr -> ORExpr OR ANDExpr 

State 36:
ANDExpr -> ANDExpr AND . LTExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On MExpr shift to state 29
-- On LTExpr shift to state 37
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 37:
ANDExpr -> ANDExpr AND LTExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
-- On THEN reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On SEMISEMI reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On RPAREN reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On OR reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On LET reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On IN reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On ELSE reduce production ANDExpr -> ANDExpr AND LTExpr 
-- On AND reduce production ANDExpr -> ANDExpr AND LTExpr 

State 38:
Expr -> LetRecExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> LetRecExpr 
-- On SEMISEMI reduce production Expr -> LetRecExpr 
-- On RPAREN reduce production Expr -> LetRecExpr 
-- On LET reduce production Expr -> LetRecExpr 
-- On IN reduce production Expr -> LetRecExpr 
-- On ELSE reduce production Expr -> LetRecExpr 

State 39:
Expr -> LetExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> LetExpr 
-- On SEMISEMI reduce production Expr -> LetExpr 
-- On RPAREN reduce production Expr -> LetExpr 
-- On LET reduce production Expr -> LetExpr 
-- On IN reduce production Expr -> LetExpr 
-- On ELSE reduce production Expr -> LetExpr 

State 40:
Expr -> IfExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> IfExpr 
-- On SEMISEMI reduce production Expr -> IfExpr 
-- On RPAREN reduce production Expr -> IfExpr 
-- On LET reduce production Expr -> IfExpr 
-- On IN reduce production Expr -> IfExpr 
-- On ELSE reduce production Expr -> IfExpr 

State 41:
Expr -> FunExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> FunExpr 
-- On SEMISEMI reduce production Expr -> FunExpr 
-- On RPAREN reduce production Expr -> FunExpr 
-- On LET reduce production Expr -> FunExpr 
-- On IN reduce production Expr -> FunExpr 
-- On ELSE reduce production Expr -> FunExpr 

State 42:
FunExpr -> FUN ID RARROW Expr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production FunExpr -> FUN ID RARROW Expr 
-- On SEMISEMI reduce production FunExpr -> FUN ID RARROW Expr 
-- On RPAREN reduce production FunExpr -> FUN ID RARROW Expr 
-- On LET reduce production FunExpr -> FUN ID RARROW Expr 
-- On IN reduce production FunExpr -> FUN ID RARROW Expr 
-- On ELSE reduce production FunExpr -> FUN ID RARROW Expr 

State 43:
ANDExpr -> ANDExpr . AND LTExpr [ THEN SEMISEMI RPAREN OR LET IN ELSE AND ]
ORExpr -> ANDExpr . [ THEN SEMISEMI RPAREN OR LET IN ELSE ]
-- On AND shift to state 36
-- On THEN reduce production ORExpr -> ANDExpr 
-- On SEMISEMI reduce production ORExpr -> ANDExpr 
-- On RPAREN reduce production ORExpr -> ANDExpr 
-- On OR reduce production ORExpr -> ANDExpr 
-- On LET reduce production ORExpr -> ANDExpr 
-- On IN reduce production ORExpr -> ANDExpr 
-- On ELSE reduce production ORExpr -> ANDExpr 

State 44:
IfExpr -> IF Expr . THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN shift to state 45
